hard-gists/2866461/run.log
=== Docker Run Log for 2866461 ===
Started at: Mi 29. Okt 13:18:32 CET 2025

[2025-10-29 13:18:32] START: Running container for 2866461
[2025-10-29 13:18:33] SUCCESS: Container 3f14a3c435670c4ffc642f4e873be377abb385d51aab82646396923c7d6447e0 started for 2866461
=== Container logs for 2866461 ===
  File "/snippet.py", line 55
    print "Connection failed: " + reason
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2866461 ===
[2025-10-29 13:18:35] INFO: Container 3f14a3c435670c4ffc642f4e873be377abb385d51aab82646396923c7d6447e0 has stopped
